@startuml ModeloUML

class Usuario{
    # int dni;
    # String nombres;
    # String apellidos;
    # String genero;
    # String telefono;
    # String email;
}

class Alumno{
    - String numeroMatricula;
    - String semestre;
    - Grupo grupos;
}

class Profesor{
    - String departamentoAcademico;
    - String cargo;
    - Date fechaInicioContrato;
    - Date fechaFinContrato;
    - List<Asignatura> AsociadasAs;
    - List<ActividadPractica> AsociadasPr;
    - List<DiseñoColaborativoPractica> AsociadasDi;
    - List<Tema> AsociadosTe;
}

class Grupo{
    - String nombre;
    - List<Alumno> alumnos;
    - List<Asignatura> asignaturas;
}

class Asignatura{
    - String codigo;
    - String nombre;
    - String descripcion;
    - int creditosAcademicos;
    - int añoAcademico;
    - String semestre;
    - String horarioClases;
    - Evaluacion evaluaciones;
    - Grupo grupos;
    - Alumno alumnos;
    - List<Tema> temas;
    - List<Profesor> profesores;
}

class Tema{
    - int id;
    - String nombre;
    - String descripcion;
    - String recursosAsociados;
    - String dificultad;
    - Evaluacion evaluaciones;
    - Asignatura asignaturas;
    - Profesor profesores;
}

class ActividadPractica{
    # String codigoPractica;
    # String titulo;
    # String dificultad;
    # int nota;
    # Profesor profesores;
    # List<Alumno> alumnos;
    # List<ActividadPracticaGrupal> actividadesGrupales;
}

class DiseñoColaborativoPractica{
    - int numeroProfesores;
    - Date fechaDiseño;
    - List<Profesor> profesores;
}

class ActividadPracticaGrupal{
    - int numeroIntegrantes;
}

class Evaluacion{
    # String id;
    # String nombre;
    # String descripcion;
    # int numeroPreguntas;
    # String tipo;
    # Date fecha;
    # List<Tema> temas;
    # List<Asignatura> asignaturas;
}

class ExamenPractico{
    - float notaExamenPractico;
}

class ExamenEscrito{
    - float notaExamenEscrito;
}

class ExamenOtros{
    - float notaOtrosExamenes;
}

class OperacionNota{
    - float ponderacionLaboratorio;
    - float ponderacionEficienciaTiempo;

    - float ponderacionTeóricoConceptual;
    - float ponderacionRedacciónOrtografía;

    - float ponderacionX;
}

class AlumnosDestacados{
    - float notasAltas;
}


Usuario <|-- Alumno
Usuario <|-- Profesor

Evaluacion <|---- ExamenPractico
Evaluacion <|---- ExamenEscrito
Evaluacion <|---- ExamenOtros

ActividadPractica <|-- ActividadPracticaGrupal

Evaluacion "1"----"*" Tema : Contiene

Asignatura "1"---"*" Tema : Contiene
Asignatura "*"---"1" Evaluacion : Se aplica a

Profesor "1"--"*" Tema : enseñar
Profesor "*"--"*" Asignatura : Enseñar
Profesor "1"--"*" ActividadPractica : diseña
Profesor "*"--"*" DiseñoColaborativoPractica : Pertecener
Profesor "1"--"*" Grupo : Estar

Alumno "*"--"1" Grupo : pertenecer

Grupo "1"--"*" Asignatura : Ver

Alumno "1"--"*" ActividadPractica : Realizar
Alumno "1"--"*" Asignatura : Ver

Alumno "*"--"1" AlumnosDestacados : Pertenece

OperacionNota -- ExamenEscrito
OperacionNota -- ExamenPractico
OperacionNota -- ExamenOtros


@enduml